--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,3 +10,9 @@
     line-height: 20px;
     font-weight: 400;
 }
+:where(.css-dev-only-do-not-override-1w1mg3n).ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select, :where(.css-dev-only-do-not-override-1w1mg3n).ant-upload-wrapper.ant-upload-picture-circle-wrapper .ant-upload.ant-upload-select{
+    width: 320px;
+    height: 110px;
+    background: white;
+    padding: 0;
+}
